mainframe-workers/src/parsers/grammar/bms/BMSParser.py
# Generated from src/parsers/grammar/bms/BMS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BMSParser ( Parser ):

    grammarFileName = "BMS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'END'", "'DFHPSD'", "'DFHPDI'", "'DFHMSD'", 
                     "'DFHMDI'", "'DFHMDF'", "'TYPE'", "','", "'='", "'('", 
                     "')'", "'FINAL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "IDENTIFIER", "STRING", "STRING2", "NUMBER", 
                      "WS", "LineComment" ]

    RULE_program = 0
    RULE_partitionSetDefinition = 1
    RULE_partitionDefinition = 2
    RULE_mapsetDefinition = 3
    RULE_mapDefinition = 4
    RULE_fieldDefinition = 5
    RULE_name = 6
    RULE_attribute_list = 7
    RULE_attribute = 8
    RULE_endMap = 9
    RULE_type = 10
    RULE_valueList = 11
    RULE_value = 12

    ruleNames =  [ "program", "partitionSetDefinition", "partitionDefinition", 
                   "mapsetDefinition", "mapDefinition", "fieldDefinition", 
                   "name", "attribute_list", "attribute", "endMap", "type", 
                   "valueList", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    IDENTIFIER=13
    STRING=14
    STRING2=15
    NUMBER=16
    WS=17
    LineComment=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BMSParser.EOF, 0)

        def partitionSetDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.PartitionSetDefinitionContext)
            else:
                return self.getTypedRuleContext(BMSParser.PartitionSetDefinitionContext,i)


        def partitionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.PartitionDefinitionContext)
            else:
                return self.getTypedRuleContext(BMSParser.PartitionDefinitionContext,i)


        def mapsetDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.MapsetDefinitionContext)
            else:
                return self.getTypedRuleContext(BMSParser.MapsetDefinitionContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BMSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8348) != 0):
                self.state = 29
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.partitionSetDefinition()
                    pass

                elif la_ == 2:
                    self.state = 27
                    self.partitionDefinition()
                    pass

                elif la_ == 3:
                    self.state = 28
                    self.mapsetDefinition()
                    pass


                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 34
                self.match(BMSParser.T__0)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(BMSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartitionSetDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BMSParser.NameContext,0)


        def attribute_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.Attribute_listContext)
            else:
                return self.getTypedRuleContext(BMSParser.Attribute_listContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_partitionSetDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPartitionSetDefinition" ):
                listener.enterPartitionSetDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPartitionSetDefinition" ):
                listener.exitPartitionSetDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPartitionSetDefinition" ):
                return visitor.visitPartitionSetDefinition(self)
            else:
                return visitor.visitChildren(self)




    def partitionSetDefinition(self):

        localctx = BMSParser.PartitionSetDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_partitionSetDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 42
                self.name()


            self.state = 45
            self.match(BMSParser.T__1)
            self.state = 49
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 46
                    self.attribute_list() 
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartitionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BMSParser.NameContext,0)


        def attribute_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.Attribute_listContext)
            else:
                return self.getTypedRuleContext(BMSParser.Attribute_listContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_partitionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPartitionDefinition" ):
                listener.enterPartitionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPartitionDefinition" ):
                listener.exitPartitionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPartitionDefinition" ):
                return visitor.visitPartitionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def partitionDefinition(self):

        localctx = BMSParser.PartitionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_partitionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 52
                self.name()


            self.state = 55
            self.match(BMSParser.T__2)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.attribute_list() 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapsetDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def endMap(self):
            return self.getTypedRuleContext(BMSParser.EndMapContext,0)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.NameContext)
            else:
                return self.getTypedRuleContext(BMSParser.NameContext,i)


        def attribute_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.Attribute_listContext)
            else:
                return self.getTypedRuleContext(BMSParser.Attribute_listContext,i)


        def mapDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.MapDefinitionContext)
            else:
                return self.getTypedRuleContext(BMSParser.MapDefinitionContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_mapsetDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapsetDefinition" ):
                listener.enterMapsetDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapsetDefinition" ):
                listener.exitMapsetDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapsetDefinition" ):
                return visitor.visitMapsetDefinition(self)
            else:
                return visitor.visitChildren(self)




    def mapsetDefinition(self):

        localctx = BMSParser.MapsetDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_mapsetDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 62
                self.name()


            self.state = 65
            self.match(BMSParser.T__3)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 66
                    self.attribute_list() 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 72
                    self.mapDefinition() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 78
                self.name()


            self.state = 81
            self.match(BMSParser.T__3)
            self.state = 82
            self.endMap()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BMSParser.NameContext,0)


        def attribute_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.Attribute_listContext)
            else:
                return self.getTypedRuleContext(BMSParser.Attribute_listContext,i)


        def fieldDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.FieldDefinitionContext)
            else:
                return self.getTypedRuleContext(BMSParser.FieldDefinitionContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_mapDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapDefinition" ):
                listener.enterMapDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapDefinition" ):
                listener.exitMapDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapDefinition" ):
                return visitor.visitMapDefinition(self)
            else:
                return visitor.visitChildren(self)




    def mapDefinition(self):

        localctx = BMSParser.MapDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mapDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 84
                self.name()


            self.state = 87
            self.match(BMSParser.T__4)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 88
                    self.attribute_list() 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 94
                    self.fieldDefinition() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(BMSParser.NameContext,0)


        def attribute_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.Attribute_listContext)
            else:
                return self.getTypedRuleContext(BMSParser.Attribute_listContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_fieldDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDefinition" ):
                listener.enterFieldDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDefinition" ):
                listener.exitFieldDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDefinition" ):
                return visitor.visitFieldDefinition(self)
            else:
                return visitor.visitChildren(self)




    def fieldDefinition(self):

        localctx = BMSParser.FieldDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fieldDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==13:
                self.state = 100
                self.name()


            self.state = 103
            self.match(BMSParser.T__5)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.attribute_list() 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BMSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BMSParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = BMSParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==7 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.AttributeContext)
            else:
                return self.getTypedRuleContext(BMSParser.AttributeContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_attribute_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute_list" ):
                listener.enterAttribute_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute_list" ):
                listener.exitAttribute_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_list" ):
                return visitor.visitAttribute_list(self)
            else:
                return visitor.visitChildren(self)




    def attribute_list(self):

        localctx = BMSParser.Attribute_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.attribute()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 113
                self.match(BMSParser.T__7)
                self.state = 114
                self.attribute()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(BMSParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(BMSParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(BMSParser.ValueContext,0)


        def valueList(self):
            return self.getTypedRuleContext(BMSParser.ValueListContext,0)


        def getRuleIndex(self):
            return BMSParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = BMSParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.type_()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(BMSParser.IDENTIFIER)
                self.state = 122
                self.match(BMSParser.T__8)
                self.state = 128
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13, 14, 15, 16]:
                    self.state = 123
                    self.value()
                    pass
                elif token in [10]:
                    self.state = 124
                    self.match(BMSParser.T__9)
                    self.state = 125
                    self.valueList()
                    self.state = 126
                    self.match(BMSParser.T__10)
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndMapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BMSParser.RULE_endMap

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndMap" ):
                listener.enterEndMap(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndMap" ):
                listener.exitEndMap(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndMap" ):
                return visitor.visitEndMap(self)
            else:
                return visitor.visitChildren(self)




    def endMap(self):

        localctx = BMSParser.EndMapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_endMap)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(BMSParser.T__6)
            self.state = 133
            self.match(BMSParser.T__8)
            self.state = 134
            self.match(BMSParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BMSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BMSParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = BMSParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BMSParser.T__6)
            self.state = 137
            self.match(BMSParser.T__8)
            self.state = 138
            self.match(BMSParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BMSParser.ValueContext)
            else:
                return self.getTypedRuleContext(BMSParser.ValueContext,i)


        def getRuleIndex(self):
            return BMSParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueList" ):
                return visitor.visitValueList(self)
            else:
                return visitor.visitChildren(self)




    def valueList(self):

        localctx = BMSParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.value()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 141
                self.match(BMSParser.T__7)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0):
                    self.state = 142
                    self.value()


                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(BMSParser.STRING, 0)

        def STRING2(self):
            return self.getToken(BMSParser.STRING2, 0)

        def NUMBER(self):
            return self.getToken(BMSParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(BMSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BMSParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = BMSParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





